[package]
name = "dep-expand"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
description = "Expand cargo dependencies during build"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/dep-expand"
repository = "https://github.com/mattsse/dep-expand"
keywords = ["cargo", "expand"]
categories = ["development-tools"]

[dependencies]
