[package]
name = "dep-expand"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
description = "Expand cargo dependencies during build"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/dep-expand"
repository = "https://github.com/mattsse/dep-expand"
keywords = ["cargo", "expand"]
categories = ["development-tools"]

[dependencies]
cargo_metadata = "0.14.0"
anyhow = "1.0.42"
syn = "1.0.74"
tempdir = "0.3.7"
fs_extra = "1.2.0"
tempfile = "3.2.0"
syn-select = "0.2.0"
quote = "1.0.9"